# graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  geometry.h  geometry.hpp  gui.h  gui.hpp  log_macros.h  main.cpp  scenes.h  scenes.hpp
include/: colors.h  raygui.c  raygui.h  raymath.h
src/: CMakeLists.txt  Makefile  bezier.hpp  geometry.cpp  geometry.hpp  gui.cpp  gui.hpp  main.cpp  point_dragger.cpp  point_dragger.hpp  polygon_animation.cpp  polygon_animation.hpp  scene.hpp  scene_bezier_elementary.cpp  scene_bezier_elementary.hpp  scene_draw_polygons.cpp  scene_draw_polygons.hpp  scene_elementary_bezier.cpp  scene_elementary_bezier.hpp  scene_ellipses.cpp  scene_ellipses.hpp  scene_localization.cpp  scene_localization.hpp  scenes.hpp
src/geometry/: bezier.cpp  bezier.hpp  geometry.cpp  geometry.hpp  polygon_animation.cpp  polygon_animation.hpp
src/gui/: gui.cpp  gui.hpp
src/scenes/: point_dragger.cpp  point_dragger.hpp  scene.hpp  scene_bezier.cpp  scene_bezier.hpp  scene_bezier_elementary.cpp  scene_bezier_elementary.hpp  scene_draw_polygons.cpp  scene_draw_polygons.hpp  scene_ellipses.cpp  scene_ellipses.hpp  scene_localization.cpp  scene_localization.hpp
